# server/http/router/router.go
@@ -41,6 +41,8 @@ func NewRouter() *gin.Engine {
 		})
 	}
 	basicGroup.POST("/clerk/callback", api.ClerkCallback)
+	basicGroup.GET("/kyc/singpass/login", api.SingpassLogin)
+	basicGroup.GET("/kyc/singpass/callback", api.SingpassCallback)
 
 	web := basicGroup.Group("/web")
 	web.Use(auth.RequireUser())
